[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-blackout"
version = "0.1.0"
description = "Clean-room grid physical risk model for resilient infrastructure analysis"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Resilient World"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pandapower>=2.14",
    "pypower>=5.1",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]
ml = [
    "torch>=2.0",
]
sensitivity = [
    "salib>=1.4",
]

[tool.setuptools.packages.find]
include = ["resilient_blackout*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
